# motion-detection

./: .gitignore  CMakeLists.txt  README.md  motion_detection.cpp  motion_detection.py
